--- a/Up/Up.vcxproj.filters
+++ b/Up/Up.vcxproj.filters
@@ -52,5 +52,23 @@
     <None Include="cubemaps.fs">
       <Filter>着色器</Filter>
     </None>
+    <None Include="dubug_quad.vs">
+      <Filter>着色器</Filter>
+    </None>
+    <None Include="debug_quad.fs">
+      <Filter>着色器</Filter>
+    </None>
+    <None Include="shadow_map.vs">
+      <Filter>着色器</Filter>
+    </None>
+    <None Include="shadow_map.fs">
+      <Filter>着色器</Filter>
+    </None>
+    <None Include="shadow_depth.fs">
+      <Filter>着色器</Filter>
+    </None>
+    <None Include="shadow_depth.vs">
+      <Filter>着色器</Filter>
+    </None>
   </ItemGroup>
 </Project>
