深度冲突未解决

--- a/Up/Up.vcxproj
+++ b/Up/Up.vcxproj
@@ -123,6 +123,10 @@
     <ClCompile Include="up.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\Up\camera.h" />
+    <ClInclude Include="..\include\Up\mesh.h" />
+    <ClInclude Include="..\include\Up\model.h" />
+    <ClInclude Include="..\include\Up\shader.h" />
     <ClInclude Include="up.h" />
   </ItemGroup>
   <ItemGroup>
