--- a/Up/Up.vcxproj.filters
+++ b/Up/Up.vcxproj.filters
@@ -32,6 +32,18 @@
     <ClInclude Include="up.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\Up\shader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Up\mesh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Up\camera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Up\model.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="up.fs">
