--- a/Up/Up.vcxproj.filters
+++ b/Up/Up.vcxproj.filters
@@ -29,9 +29,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="up.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\Up\shader.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -42,6 +39,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="..\include\Up\model.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\up\up.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\up\skybox.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
