--- a/Up/Up.vcxproj.filters
+++ b/Up/Up.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClInclude Include="..\include\up\cube.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\up\depthMap.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="up.fs">
