--- a/Up/Up.vcxproj.filters
+++ b/Up/Up.vcxproj.filters
@@ -58,12 +58,6 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="up.fs">
-      <Filter>着色器</Filter>
-    </None>
-    <None Include="up.vs">
-      <Filter>着色器</Filter>
-    </None>
     <None Include="skybox.vs">
       <Filter>着色器</Filter>
     </None>
@@ -92,6 +86,12 @@
       <Filter>着色器</Filter>
     </None>
     <None Include="blending.fs">
+      <Filter>着色器</Filter>
+    </None>
+    <None Include="model.fs">
+      <Filter>着色器</Filter>
+    </None>
+    <None Include="model.vs">
       <Filter>着色器</Filter>
     </None>
   </ItemGroup>
